--- a/css/desk.scss
+++ b/css/desk.scss
@@ -198,6 +198,7 @@ body {
   margin-left: 10%;
   font-size: 3.5rem;
   font-weight: 500;
+  margin-bottom: 4vh;
 }
 
 .karty {
@@ -205,7 +206,6 @@ body {
   grid-template: 1fr/ 1fr 1fr 1fr;
   width: 80%;
   margin-left: 10%;
-  margin-top: 3vh;
   margin-bottom: 10vh;
 
   h2 {
