--- a/css/mobile.css
+++ b/css/mobile.css
@@ -49,8 +49,8 @@ body {
 }
 
 .header_picture {
-  position: absolute;
   opacity: 0;
+  margin-top: 10vh;
   width: 70%;
   margin-left: 15%;
   z-index: 1000;
@@ -125,7 +125,7 @@ body {
       grid-template-columns: 1fr 1fr 1fr / 1fr;
   width: 80%;
   margin-left: 10%;
-  margin-top: 20vh;
+  margin-top: -vh;
   margin-bottom: 5vh;
 }
 
@@ -184,26 +184,37 @@ body {
 }
 
 .projekty {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: 1fr 1fr;
-  -ms-grid-columns: 1fr;
-      grid-template: 1fr 1fr / 1fr;
-  height: auto;
-  padding-top: 0vh;
-  padding-bottom: 10vh;
-  margin-top: 5vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
   color: black;
+  margin-top: -2vh;
 }
 
 .projekty .info {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: 1 / 1 / 1 / 1;
+  margin: 0;
+  width: 80%;
+  margin-left: 10%;
+}
+
+.projekty .ilustracja_logo {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   -ms-grid-column: 1;
   grid-area: 2 / 1 / 3 / 1;
-  margin: 0;
   width: 80%;
-  margin-left: 10%;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .projekty h1 {
@@ -219,15 +230,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-}
-
-.ilustracja_logo {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: 1 / 1 / 1 / 1;
-  width: 90%;
-  -ms-grid-column-align: center;
-      justify-self: center;
 }
 
 .pre-karty {
