--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -40,8 +40,8 @@ body {
 }
 
 .header_picture {
-  position: absolute;
   opacity: 0;
+  margin-top: 10vh;
   width: 70%;
   margin-left: 15%;
   z-index: 1000;
@@ -105,7 +105,7 @@ body {
   grid-template-columns: 1fr 1fr 1fr / 1fr;
   width: 80%;
   margin-left: 10%;
-  margin-top: 20vh;
+  margin-top: -vh;
   margin-bottom: 5vh;
 
   h1 {
@@ -154,22 +154,23 @@ body {
 }
 
 .projekty {
-  display: grid;
-  grid-template: 1fr 1fr / 1fr;
-  height: auto;
-  
-  padding-top: 0vh;
-  padding-bottom: 10vh;
-  margin-top: 5vh;
-
+  display: flex;
+  flex-direction: column-reverse;
   color: black;
-
+  margin-top: -2vh;
 
   .info {
-    grid-area: 2 / 1 / 3 / 1;
+    grid-area: 1 / 1 / 1 / 1;
     margin: 0;
     width: 80%;
     margin-left: 10%;
+  }
+
+  .ilustracja_logo {
+    grid-area: 2 / 1 / 3 / 1;
+    width: 80%;
+    justify-self: center;
+    align-self: center;
   }
 
   h1 {
@@ -183,11 +184,7 @@ body {
   }
 }
 
-.ilustracja_logo {
-  grid-area: 1 / 1 / 1 / 1;
-  width: 90%;
-  justify-self: center;
-}
+
 
 .pre-karty {
   margin-left: 10%;
