--- a/css/mobile.css
+++ b/css/mobile.css
@@ -50,7 +50,7 @@ body {
 
 .header_picture {
   opacity: 0;
-  margin-top: 10vh;
+  margin-top: 15vh;
   width: 70%;
   margin-left: 15%;
   z-index: 1000;
@@ -125,12 +125,11 @@ body {
       grid-template-columns: 1fr 1fr 1fr / 1fr;
   width: 80%;
   margin-left: 10%;
-  margin-top: -vh;
+  margin-top: 10vh;
   margin-bottom: 5vh;
 }
 
 .info h1 {
-  opacity: 0;
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   -ms-grid-column: 1;
@@ -148,7 +147,6 @@ body {
   margin-top: 4vh;
   line-height: 1.25;
   width: 100%;
-  opacity: 0;
 }
 
 .actual_work {
@@ -193,6 +191,7 @@ body {
           flex-direction: column-reverse;
   color: black;
   margin-top: -2vh;
+  margin-bottom: 10vh;
 }
 
 .projekty .info {
@@ -249,6 +248,7 @@ body {
   margin-left: 10%;
   width: 80%;
   margin-top: 4vh;
+  margin-bottom: 5vh;
 }
 
 .element {
@@ -299,6 +299,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   margin-left: 10%;
+  margin-bottom: 5vh;
 }
 
 .rekomendacje-element {
@@ -359,8 +360,9 @@ footer {
   margin-top: 10vh;
   width: 100%;
   height: 10vh;
-  background: #26203b;
-  color: #8564c2;
+  font-weight: 300;
+  background: white;
+  color: black;
 }
 
 .footer_info {
