--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -41,7 +41,7 @@ body {
 
 .header_picture {
   opacity: 0;
-  margin-top: 10vh;
+  margin-top: 15vh;
   width: 70%;
   margin-left: 15%;
   z-index: 1000;
@@ -105,11 +105,10 @@ body {
   grid-template-columns: 1fr 1fr 1fr / 1fr;
   width: 80%;
   margin-left: 10%;
-  margin-top: -vh;
+  margin-top: 10vh;
   margin-bottom: 5vh;
 
   h1 {
-    opacity: 0;
     grid-area: 1 / 1 / 2 / 1 ;
     font-weight: 500;
     font-size: 4rem;
@@ -122,7 +121,6 @@ body {
   margin-top: 4vh;
   line-height: 1.25;
   width: 100%;
-  opacity: 0;
 }
 
 .actual_work {
@@ -158,6 +156,7 @@ body {
   flex-direction: column-reverse;
   color: black;
   margin-top: -2vh;
+  margin-bottom: 10vh;
 
   .info {
     grid-area: 1 / 1 / 1 / 1;
@@ -198,6 +197,7 @@ body {
   margin-left: 10%;
   width: 80%;
   margin-top: 4vh;
+  margin-bottom: 5vh;
 }
 
 .element {
@@ -238,6 +238,7 @@ body {
   display: flex;
   flex-direction: column;
   margin-left: 10%;
+  margin-bottom: 5vh;
 }
 
 .rekomendacje-element {
@@ -287,8 +288,9 @@ footer {
   margin-top: 10vh;
   width: 100%;
   height: 10vh;
-  background: rgb(38, 32, 59);
-  color: rgb(133, 100, 194);
+  font-weight: 300;
+  background: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
 }
 
 .footer_info {
